--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,16 @@
 [Module]
 Name=DBIx::Admin::CreateTable
-Changelog.Creator=Module::Metadata::Changes V 2.05
-Changelog.Parser=Config::IniFiles V 2.82
+Changelog.Creator=Module::Metadata::Changes V 2.12
+Changelog.Parser=Config::IniFiles V 3.000003
+
+[V 2.11]
+Date=2021-02-04T15:13:00
+Comments= <<EOT
+- Reformat Makefile.PL.
+- Change the license from artistic_2 to perl.
+- Add t/00.*.
+- Update Makefile.PL and POD to change RT to github.
+EOT
 
 [V 2.10]
 Date=2014-03-10T13:27:00
